# GPR-200-FinalProject

./: CMakeLists.txt  README.md
assignments/assignment1_helloTriangle/: main.cpp
assignments/assignment1_helloTriangle/assets/: unlit.frag  unlit.vert
assignments/assignment2_textures/: CMakeLists.txt  main.cpp
assignments/assignment2_textures/assets/: bg.frag  bg.vert  character.frag  character.vert
assignments/assignment5_lighting/: CMakeLists.txt  main.cpp
assignments/assignment5_lighting/assets/: lit.frag  unlit.vert
assignments/brodyHelloTriangleCopy/: CMakeLists.txt  main.cpp
assignments/brodyHelloTriangleCopy/assets/: ToonShader.frag  maze.frag  maze.vert  unlit.frag  unlit.vert
assignments/proceduralGeometry/: CMakeLists.txt  main.cpp
assignments/proceduralGeometry/assets/: lit.vert
assignments/stylizedShading/: CMakeLists.txt  main.cpp
assignments/stylizedShading/assets/: ToonShader.frag  lit.frag  lit.vert
core/: CMakeLists.txt
core/ew/: mesh.cpp  mesh.h  player.cpp  player.h  procGen.cpp  procGen.h  shader.cpp  shader.h  texture.cpp  transform.cpp  transform.h
mazeGeneration/: CMakeLists.txt  main.cpp
mazeGeneration/assets/: lit.frag  lit.vert  skybox.frag  skybox.vert
